# chess_ai

./: .gitignore  config.yaml
outdated/: README.md  pyproject.toml
outdated/src/chess_ai/: __main__.py  board_tokenizer.py  chess_bot.py  chess_transformer.py  self_play.py  self_play_data_module.py
outdated/src/utils/: logger.py
outdated/tests/test_chess_ai/: test_board_tokenizer.py  test_chess_transformer.py  test_self_play.py  test_self_play_data_module.py
src/lightning_template/: config.py  self_play_dataset.py
