[project]
name = "chess_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "pierre"}
]
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "lightning>=2.5.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "pyside6>=6.9.0",
    "structlog>=25.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
